specified --add-exports JVM parameters